--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="container">
             <!-- <a class="navbar-brand" href="index.html" style="background-image:url(images/Ram.png);"></a> -->
             <a href="index.html">
-                <img alt="Ramkumar Rajaram" src="/images/Picture.png">
+                <img alt="Ramkumar Rajaram" src="/images/Picture.png" width="150px" height="65px">
             </a>
             <!-- <button class=" navbar-toggler js-fh5co-nav-toggle fh5co-nav-toggle " type="button " data-toggle="collapse " data-target="#ftco-nav " aria-controls="ftco-nav " aria-expanded="false " aria-label="Toggle navigation ">
 				<span class="oi oi-menu "></span> Menu
