--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900" rel="stylesheet">
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
     <link rel="stylesheet" href="css/open-iconic-bootstrap.min.css">
     <link rel="stylesheet" href="css/animate.css">
 
@@ -29,9 +31,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar ftco-navbar-light site-navbar-target" id="ftco-navbar">
         <div class="container">
-            <a href="index.html">
-                <img alt="Ramkumar Rajaram" src="/images/Ram.jpg" width="150px" height="65px">
-            </a>
+            <a class="profile-circle" href="index.html"></a>
             <button class="navbar-toggler js-fh5co-nav-toggle fh5co-nav-toggle" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="oi oi-menu"></span> Menu
             </button>
@@ -55,6 +55,9 @@
                     <div class="text text-center">
                         <span class="subheading">Hey! I am</span>
                         <h1>Ramkumar Rajaram</h1>
+                        <a href="https://www.linkedin.com/in/ramkumar-rajaram-758291129/" target="blank" class="fa fa-linkedin"></a>
+                        <a href="https://medium.com/@ramkumarrajaram/" target="blank" class="fa fa-medium"></a>
+                        <a href="https://github.com/ramkumarrajaram/" target="blank" class="fa fa-github"></a>
                         <h2>I'm a
                             <span class="txt-rotate" data-period="2000" data-rotate='["Web Designer.","Developer.","Photographer.","Marketer.","Blogger" ]'></span>
                         </h2>
@@ -83,7 +86,6 @@
                 <div class="col-md-6 col-lg-6 pl-md-5 py-5">
                     <div class="row justify-content-start pb-3">
                         <div class="col-md-12 heading-section ftco-animate">
-                            <h1 class="big">About</h1>
                             <h2 class="mb-4">About Me</h2>
                             <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.
                             </p>
@@ -150,9 +152,9 @@
                                 <span class="flaticon-ideas"></span>
                             </div>
                             <div class="text pl-3">
-                                <span class="date">2008-2012</span>
                                 <h2>Bachelor of Engineering in Electrical and Electronics Engineering</h2>
                                 <span class="position">Anna University, Chennai</span>
+                                <span class="date">2008-2012</span>
                                 <p>First class with Distinction with a CGPA of 8.77</p>
                             </div>
                         </div>
@@ -165,9 +167,9 @@
                                 <span class="flaticon-ideas"></span>
                             </div>
                             <div class="text pl-3">
-                                <span class="date">2014-2015</span>
-                                <h2>Software Developer</h2>
-                                <span class="position">Cambridge University</span>
+                                <h2>Full Stack Developer</h2>
+                                <span class="position">Singapore Airlines</span></br>
+                                <span class="date">Jan 2020 - Present</span>
                                 <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
                             </div>
                         </div>
@@ -442,7 +444,6 @@
         <div class="container-fluid px-md-0">
             <div class="row no-gutters justify-content-center pb-5">
                 <div class="col-md-12 heading-section text-center ftco-animate">
-                    <h1 class="big big-2">Projects</h1>
                     <h2 class="mb-4">Our Projects</h2>
                     <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
                 </div>
@@ -564,7 +565,6 @@
         <div class="container">
             <div class="row justify-content-center mb-5 pb-3">
                 <div class="col-md-7 heading-section text-center ftco-animate">
-                    <h1 class="big big-2">Contact</h1>
                     <h2 class="mb-4">Contact Me</h2>
                     <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
                 </div>
