--- a/index.html
+++ b/index.html
@@ -143,12 +143,11 @@
                         <h2 class="heading">Education</h2>
                         <div class="resume-wrap d-flex ftco-animate">
                             <div class="icon d-flex align-items-center justify-content-center">
-                                <span class="flaticon-ideas"></span>
                             </div>
                             <div class="text pl-3">
                                 <h2>Bachelor of Engineering in Electrical and Electronics Engineering</h2>
-                                <span class="position">Anna University, Chennai</span>
-                                <span class="date">2008-2012</span>
+                                <span class="position">Anna University, Chennai</span></br>
+                                <span class="date">2008 - 2012</span>
                                 <p>First class with Distinction with a CGPA of 8.77</p>
                             </div>
                         </div>
@@ -158,7 +157,6 @@
                         <h2 class="heading">Experience</h2>
                         <div class="resume-wrap d-flex ftco-animate">
                             <div class="icon d-flex align-items-center justify-content-center">
-                                <span class="flaticon-ideas"></span>
                             </div>
                             <div class="text pl-3">
                                 <h2>Full Stack Developer</h2>
@@ -169,7 +167,6 @@
                         </div>
                         <div class="resume-wrap d-flex ftco-animate">
                             <div class="icon d-flex align-items-center justify-content-center">
-                                <span class="flaticon-ideas"></span>
                             </div>
                             <div class="text pl-3">
                                 <span class="date">2014-2015</span>
@@ -180,7 +177,6 @@
                         </div>
                         <div class="resume-wrap d-flex ftco-animate">
                             <div class="icon d-flex align-items-center justify-content-center">
-                                <span class="flaticon-ideas"></span>
                             </div>
                             <div class="text pl-3">
                                 <span class="date">2014-2015</span>
@@ -191,7 +187,6 @@
                         </div>
                         <div class="resume-wrap d-flex ftco-animate">
                             <div class="icon d-flex align-items-center justify-content-center">
-                                <span class="flaticon-ideas"></span>
                             </div>
                             <div class="text pl-3">
                                 <span class="date">2014-2015</span>
@@ -202,7 +197,6 @@
                         </div>
                         <div class="resume-wrap d-flex ftco-animate">
                             <div class="icon d-flex align-items-center justify-content-center">
-                                <span class="flaticon-ideas"></span>
                             </div>
                             <div class="text pl-3">
                                 <span class="date">2014-2015</span>
@@ -213,7 +207,6 @@
                         </div>
                         <div class="resume-wrap d-flex ftco-animate">
                             <div class="icon d-flex align-items-center justify-content-center">
-                                <span class="flaticon-ideas"></span>
                             </div>
                             <div class="text pl-3">
                                 <span class="date">2017-2018</span>
@@ -386,7 +379,6 @@
                         <h2 class="heading">Awards</h2>
                         <div class="resume-wrap d-flex ftco-animate">
                             <div class="icon d-flex align-items-center justify-content-center">
-                                <span class="flaticon-ideas"></span>
                             </div>
                             <div class="text pl-3">
                                 <span class="date">2014-2015</span>
@@ -397,7 +389,6 @@
                         </div>
                         <div class="resume-wrap d-flex ftco-animate">
                             <div class="icon d-flex align-items-center justify-content-center">
-                                <span class="flaticon-ideas"></span>
                             </div>
                             <div class="text pl-3">
                                 <span class="date">2014-2015</span>
@@ -408,7 +399,6 @@
                         </div>
                         <div class="resume-wrap d-flex ftco-animate">
                             <div class="icon d-flex align-items-center justify-content-center">
-                                <span class="flaticon-ideas"></span>
                             </div>
                             <div class="text pl-3">
                                 <span class="date">2014-2015</span>
@@ -419,7 +409,6 @@
                         </div>
                         <div class="resume-wrap d-flex ftco-animate">
                             <div class="icon d-flex align-items-center justify-content-center">
-                                <span class="flaticon-ideas"></span>
                             </div>
                             <div class="text pl-3">
                                 <span class="date">2014-2015</span>
