--- a/index.html
+++ b/index.html
@@ -561,7 +561,7 @@
                         </div>
                         <div>
                             <h3 class="mb-4">Email Address</h3>
-                            <p><a href="mailto:info@yoursite.com">info@yoursite.com</a></p>
+                            <p><a href="mailto:splendidramkumar@gmail.com?subject=from website">Email Me</a></p>
                         </div>
                     </div>
                 </div>
