--- a/index.html
+++ b/index.html
@@ -198,149 +198,116 @@
                     </div>
                     <div id="page-3" class="page three">
                         <h2 class="heading">Skills</h2>
-                        <div class="row progress-circle mb-5">
-                            <div class="col-lg-4 mb-4">
-                                <div class="bg-white rounded-lg shadow p-4">
-                                    <h2 class="h5 font-weight-bold text-center mb-4">CSS</h2>
 
-                                    <div class="progress mx-auto" data-value='90'>
-                                        <span class="progress-left">
-											<span class="progress-bar border-primary"></span>
-                                        </span>
-                                        <span class="progress-right">
-											<span class="progress-bar border-primary"></span>
-                                        </span>
-                                        <div class="progress-value w-100 h-100 rounded-circle d-flex align-items-center justify-content-center">
-                                            <div class="h2 font-weight-bold">90<sup class="small">%</sup></div>
-                                        </div>
-                                    </div>
-
-                                    <div class="row text-center mt-4">
-                                        <div class="col-6 border-right">
-                                            <div class="h4 font-weight-bold mb-0">28%</div><span class="small text-gray">Last week</span>
-                                        </div>
-                                        <div class="col-6">
-                                            <div class="h4 font-weight-bold mb-0">60%</div><span class="small text-gray">Last month</span>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="col-lg-4 mb-4">
-                                <div class="bg-white rounded-lg shadow p-4">
-                                    <h2 class="h5 font-weight-bold text-center mb-4">HTML</h2>
-
-                                    <div class="progress mx-auto" data-value='80'>
-                                        <span class="progress-left">
-											<span class="progress-bar border-primary"></span>
-                                        </span>
-                                        <span class="progress-right">
-											<span class="progress-bar border-primary"></span>
-                                        </span>
-                                        <div class="progress-value w-100 h-100 rounded-circle d-flex align-items-center justify-content-center">
-                                            <div class="h2 font-weight-bold">80<sup class="small">%</sup></div>
-                                        </div>
-                                    </div>
-
-                                    <div class="row text-center mt-4">
-                                        <div class="col-6 border-right">
-                                            <div class="h4 font-weight-bold mb-0">28%</div><span class="small text-gray">Last week</span>
-                                        </div>
-                                        <div class="col-6">
-                                            <div class="h4 font-weight-bold mb-0">60%</div><span class="small text-gray">Last month</span>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="col-lg-4 mb-4">
-                                <div class="bg-white rounded-lg shadow p-4">
-                                    <h2 class="h5 font-weight-bold text-center mb-4">jQuery</h2>
-
-                                    <div class="progress mx-auto" data-value='75'>
-                                        <span class="progress-left">
-											<span class="progress-bar border-primary"></span>
-                                        </span>
-                                        <span class="progress-right">
-											<span class="progress-bar border-primary"></span>
-                                        </span>
-                                        <div class="progress-value w-100 h-100 rounded-circle d-flex align-items-center justify-content-center">
-                                            <div class="h2 font-weight-bold">75<sup class="small">%</sup></div>
-                                        </div>
-                                    </div>
-
-                                    <div class="row text-center mt-4">
-                                        <div class="col-6 border-right">
-                                            <div class="h4 font-weight-bold mb-0">28%</div><span class="small text-gray">Last week</span>
-                                        </div>
-                                        <div class="col-6">
-                                            <div class="h4 font-weight-bold mb-0">60%</div><span class="small text-gray">Last month</span>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+                        <h4 class="ftco-animate"><strong>Languages</strong></h4><br>
                         <div class="row">
                             <div class="col-md-6 animate-box">
                                 <div class="progress-wrap ftco-animate">
-                                    <h3>Photoshop</h3>
-                                    <div class="progress">
-                                        <div class="progress-bar color-1" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width:90%">
-                                            <span>90%</span>
-                                        </div>
-                                    </div>
+                                    <h3>Java</h3>
                                 </div>
                             </div>
                             <div class="col-md-6 animate-box">
                                 <div class="progress-wrap ftco-animate">
-                                    <h3>jQuery</h3>
-                                    <div class="progress">
-                                        <div class="progress-bar color-2" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width:85%">
-                                            <span>85%</span>
-                                        </div>
-                                    </div>
+                                    <h3>JavaScript</h3>
+                                </div>
+                            </div>
+                            <div class="col-md-6 animate-box">
+                                <div class="progress-wrap ftco-animate">
+                                    <h3>Kotlin</h3>
+                                </div>
+                            </div>
+                            <div class="col-md-6 animate-box">
+                                <div class="progress-wrap ftco-animate">
+                                    <h3>Python</h3>
                                 </div>
                             </div>
                             <div class="col-md-6 animate-box">
                                 <div class="progress-wrap ftco-animate">
                                     <h3>HTML5</h3>
-                                    <div class="progress">
-                                        <div class="progress-bar color-3" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100" style="width:95%">
-                                            <span>95%</span>
-                                        </div>
-                                    </div>
                                 </div>
                             </div>
                             <div class="col-md-6 animate-box">
                                 <div class="progress-wrap ftco-animate">
                                     <h3>CSS3</h3>
-                                    <div class="progress">
-                                        <div class="progress-bar color-4" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width:90%">
-                                            <span>90%</span>
-                                        </div>
-                                    </div>
                                 </div>
                             </div>
                             <div class="col-md-6 animate-box">
                                 <div class="progress-wrap ftco-animate">
-                                    <h3>WordPress</h3>
-                                    <div class="progress">
-                                        <div class="progress-bar color-5" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%">
-                                            <span>70%</span>
-                                        </div>
-                                    </div>
+                                    <h3>SQL</h3>
+                                </div>
+                            </div>
+                        </div>
+
+                        <h4 class="ftco-animate"><strong>Frameworks and Libraries</strong></h4><br>
+                        <div class="row">
+                            <div class="col-md-6 animate-box">
+                                <div class="progress-wrap ftco-animate ">
+                                    <h3>Spring Framework</h3>
                                 </div>
                             </div>
                             <div class="col-md-6 animate-box">
-                                <div class="progress-wrap ftco-animate">
-                                    <h3>SEO</h3>
-                                    <div class="progress">
-                                        <div class="progress-bar color-6" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:80%">
-                                            <span>80%</span>
-                                        </div>
-                                    </div>
+                                <div class="progress-wrap ftco-animate ">
+                                    <h3>React.js</h3>
                                 </div>
                             </div>
+                            <div class="col-md-6 animate-box">
+                                <div class="progress-wrap ftco-animate ">
+                                    <h3>Node.js</h3>
+                                </div>
+                            </div>
+                            <div class="col-md-6 animate-box">
+                                <div class="progress-wrap ftco-animate ">
+                                    <h3>Dagger</h3>
+                                </div>
+                            </div>
+                            <div class="col-md-6 animate-box">
+                                <div class="progress-wrap ftco-animate ">
+                                    <h3>Hibernate</h3>
+                                </div>
+                            </div>
+                            <div class="col-md-6 animate-box">
+                                <div class="progress-wrap ftco-animate ">
+                                    <h3>JUnit</h3>
+                                </div>
+                            </div>
+                            <div class="col-md-6 animate-box">
+                                <div class="progress-wrap ftco-animate ">
+                                    <h3>Jest</h3>
+                                </div>
+                            </div><div class="col-md-6 animate-box">
+                                <div class="progress-wrap ftco-animate ">
+                                    <h3>Espresso</h3>
+                                </div>
+                            </div>
+                        </div>
+
+                        <h4 class="ftco-animate"><strong>Technologies and Tools</strong></h4><br>
+                        <div class="row">
+                            <div class="col-md-6 animate-box">
+                                <div class="progress-wrap ftco-animate ">
+                                    <h3>Amazon Web Services (AWS)</h3>
+                                </div>
+                            </div>
+                            <div class="col-md-6 animate-box">
+                                <div class="progress-wrap ftco-animate ">
+                                    <h3>Git</h3>
+                                </div>
+                            </div>
+                            <div class="col-md-6 animate-box">
+                                <div class="progress-wrap ftco-animate ">
+                                    <h3>Intellij and Android Studio</h3>
+                                </div>
+                            </div>
+                            <div class="col-md-6 animate-box">
+                                <div class="progress-wrap ftco-animate ">
+                                    <h3>Visual Studio Code</h3>
+                                </div>
+                            </div>  
+                            <div class="col-md-6 animate-box">
+                                <div class="progress-wrap ftco-animate ">
+                                    <h3>Eclipse</h3>
+                                </div>
+                            </div>     
                         </div>
                     </div>
                     <div id="page-4" class="page four">
