--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
                             <div class="udemy-logo">
                             </div>
                             <div class="text pl-3">
-                                <h2><a href="https://www.udemy.com/certificate/UC-078cd4c2-bf07-4c2a-9a20-dfaabfbc9f6c/" target="blank">Modern React with Redux [2020 Update]</a></h2>
+                                <h2><a class="font-white" href="https://www.udemy.com/certificate/UC-078cd4c2-bf07-4c2a-9a20-dfaabfbc9f6c/" target="blank">Modern React with Redux [2020 Update]</a></h2>
                                 <span class="position">Udemy</span><br/>
                                 <span class="date">Issued May 2020</span>
                             </div>
@@ -326,7 +326,7 @@
                             <div class="udemy-logo">
                             </div>
                             <div class="text pl-3">
-                                <h2><a href="http://ude.my/UC-078cd4c2-bf07-4c2a-9a20-dfaabfbc9f6c" target="blank">Learn to Code in Python 3: Programming beginner to advanced</a></h2>
+                                <h2><a class="font-white" href="http://ude.my/UC-078cd4c2-bf07-4c2a-9a20-dfaabfbc9f6c" target="blank">Learn to Code in Python 3: Programming beginner to advanced</a></h2>
                                 <span class="position">Udemy</span><br/>
                                 <span class="date">Issued Jun 2020</span>
                             </div>
@@ -362,7 +362,7 @@
                             <div class="testdome-logo">
                             </div>
                             <div class="text pl-3">
-                                <h2><a href="https://www.testdome.com/cert/bc78fec68f134360af24b772e9fda307" target="blank">Java</a></h2>
+                                <h2><a class="font-white" href="https://www.testdome.com/cert/bc78fec68f134360af24b772e9fda307" target="blank">Java</a></h2>
                                 <span class="position">TestDome</span><br/>
                                 <span class="date">Issued Dec 2019, Expires by Dec 2022</span>
                             </div>
@@ -371,7 +371,7 @@
                             <div class="testdome-logo">
                             </div>
                             <div class="text pl-3">
-                                <h2><a href="https://www.testdome.com/cert/8f2d077a84024b9db4f18d0bd79c925f" target="blank">JavaScript</a></h2>
+                                <h2><a class="font-white" href="https://www.testdome.com/cert/8f2d077a84024b9db4f18d0bd79c925f" target="blank">JavaScript</a></h2>
                                 <span class="position">TestDome</span><br/>
                                 <span class="date">Issued Dec 2019, Expires by Dec 2022</span>
                             </div>
