--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
                 </div>
             </div>
 
-            <div class="row d-flex contact-info mb-5">
+            <div class="row d-flex justify-content-center contact-info mb-5">
                 <div class="col-md-6 col-lg-3 d-flex ftco-animate">
                     <div class="align-self-stretch box text-center p-4 shadow">
                         <div class="icon d-flex align-items-center justify-content-center">
@@ -418,16 +418,6 @@
                         </div>
                         <div class="contact-me">
                             <h3><a href="https://github.com/ramkumarrajaram/" target="blank">Github</h3>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-6 col-lg-3 d-flex ftco-animate">
-                    <div class="align-self-stretch box text-center p-4 shadow">
-                        <div class="icon d-flex align-items-center justify-content-center">
-                            <a href="#" class="fa fa-desktop"></a>
-                        </div>
-                        <div class="contact-me">
-                            <h3><a class="mb-4" href="#">Website</h3>
                         </div>
                     </div>
                 </div>
