--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     </div>
                     <div class="counter-wrap ftco-animate d-flex mt-md-3">
                         <div class="text">
-                            <p><a href="resume/Ramkumar_Rajaram_Resume_18Aug2020_updated.pdf" target="_blank" class="btn btn-primary py-3 px-3">Download CV</a></p>
+                            <p><a href="resume/Ramkumar_Rajaram_Resume_18Aug2020_updated.pdf" target="_blank" class="btn btn-primary py-3 px-3" download>Download CV</a></p>
                         </div>
                     </div>
                 </div>
